--- a/vignettes/Model_murine.Rmd
+++ b/vignettes/Model_murine.Rmd
@@ -41,6 +41,7 @@ open metadata.csv in Excel, fill in the file and save it under .csv with ";" as 
 ```{r, eval=FALSE}
 library(devtools)
 devtools::install_github("RibosomeCRCL/rRMSAnalyzer")
+devtools::install_github("RibosomeCRCL/rRMSReports")
 library(rRMSAnalyzer)
 library(rRMSReports)
 ```
@@ -193,26 +194,26 @@ In this section we run the two reports for analysis.
  
  Ex of metadata:
 
-| filename              | samplename           | variableA | variableB | variableC | condition   | treatment | lib |
+| filename              | samplename           | variableA | variableB | variableC | treatment   | condition | lib |
 |-----------------------|----------------------|-----------|-----------|-----------|-------------|-----------|-----|
 | S26_R1.5_counts.csv   | variableB_N2_P2      | NA        | P2        | NA        | variableB   | P2        | L2  |
 | S27_R1.5_counts.csv   | variableA_N2_P1      | P1        | NA        | NA        | variableA   | P1        | L2  |
-| S28_R1.5_counts.csv   | variableC_D4_ctrlNA  | NA        | NA        | ctrl      | variableC   | ctrl      | L2  |
+| S28_R1.5_counts.csv   | variableC_N1_ctrl    | NA        | NA        | ctrl      | variableC   | ctrl      | L2  |
 | S30_R1.5_counts.csv   | variableB_N1_P2      | NA        | P2        | NA        | variableB   | P2        | L2  |
-| S31_R1.5_counts.csv   | variableC_D2_P2      | NA        | NA        | P2        | variableC   | P2        | L2  |
+| S31_R1.5_counts.csv   | variableC_N2_P2      | NA        | NA        | P2        | variableC   | P2        | L2  |
 | S32_R1.5_counts.csv   | variableA_N3_P1      | P1        | NA        | NA        | variableA   | P1        | L2  |
-| S33_R1.5_counts.csv   | variableA_N3_ctrlctrl| NA        | NA        | NA        | variableA   | ctrl      | L2  |
-| S34_R1.5_counts.csv   | variableC_D1_ctrlNA  | NA        | NA        | ctrl      | variableC   | ctrl      | L2  |
+| S33_R1.5_counts.csv   | variableA_N3_ctrl    | ctrl      | NA        | NA        | variableA   | ctrl      | L2  |
+| S34_R1.5_counts.csv   | variableC_N1_ctrl    | NA        | NA        | ctrl      | variableC   | ctrl      | L2  |
 | S35_R1.5_counts.csv   | variableA_N1_P2      | P2        | NA        | NA        | variableA   | P2        | L2  |
-| S36_R1.5_counts.csv   | variableA_N2_ctrlctrl| NA        | NA        | NA        | variableA   | ctrl      | L2  |
-| S37_R1.5_counts.csv   | variableC_D2_ctrlNA  | NA        | NA        | ctrl      | variableC   | ctrl      | L2  |
+| S36_R1.5_counts.csv   | variableA_N2_ctrl    | ctrl      | NA        | NA        | variableA   | ctrl      | L2  |
+| S37_R1.5_counts.csv   | variableC_N2_ctrl    | NA        | NA        | ctrl      | variableC   | ctrl      | L2  |
 | S38_R1.5_counts.csv   | variableA_N2_P2      | P2        | NA        | NA        | variableA   | P2        | L2  |
-| S39_R1.5_counts.csv   | variableC_D1_P2      | NA        | NA        | P2        | variableC   | P2        | L2  |
-| S40_R1.5_counts.csv   | variableB_N1_ctrlNA  | ctrl      | NA        | NA        | variableB   | ctrl      | L2  |
+| S39_R1.5_counts.csv   | variableC_N1_P2      | NA        | NA        | P2        | variableC   | P2        | L2  |
+| S40_R1.5_counts.csv   | variableB_N1_ctrl    | NA        | ctrl      | NA        | variableB   | ctrl      | L2  |
 | S41_R1.5_counts.csv   | variableA_N1_P1      | P1        | NA        | NA        | variableA   | P1        | L2  |
-| S42_R1.5_counts.csv   | variableA_N1_ctrlctrl| NA        | NA        | NA        | variableA   | ctrl      | L2  |
-| S43_R1.5_counts.csv   | variableC_D3_P2      | NA        | NA        | P2        | variableC   | P2        | L2  |
-| S44_R1.5_counts.csv   | variableB_N3_ctrlNA  | ctrl      | NA        | NA        | variableB   | ctrl      | L2  |
+| S42_R1.5_counts.csv   | variableA_N1_ctrl    | ctrl      | NA        | NA        | variableA   | ctrl      | L2  |
+| S43_R1.5_counts.csv   | variableC_N3_P2      | NA        | NA        | P2        | variableC   | P2        | L2  |
+| S44_R1.5_counts.csv   | variableB_N3_ctrl    | NA        | ctrl      | NA        | variableB   | ctrl      | L2  |
 | S45_R1.5_counts.csv   | variableA_N3_P2      | P2        | NA        | NA        | variableA   | P2        | L2  |
 
 If only one column condition, it is still the same thing. Here in the metadata example we can see 3 columns variable. They are the different comparison that is wanted to be analysed. You can replace the name for your custom ones. You can also run the analysis on "condition" column. In this case analysis will be done camparing as many modalities as you have in the same report. (The column treatment is optionnal)
