add published article of Hermès Paraqindes

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -82,3 +82,18 @@ eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.1707674114}
 	url = {http://dx.doi.org/10.1093/nargab/lqaa078},
 	langid = {en}
 }
+
+@article{paraqindes2023,
+	title = {Isocitrate dehydrogenase wt and IDHmut adult-type diffuse gliomas display distinct alterations in ribosome biogenesis and 2'O-methylation of ribosomal RNA},
+	author = {Paraqindes H, Mourksi NE, Ballesta S, Hedjam J, Bourdelais F, Fenouil T, Picart T, Catez F, Combe T, Ferrari A, Kielbassa J, Thomas E, Tonon L, Viari A, Attignon V, Carrere M, Perrossier J, Giraud S, Vanbelle C, Gabut M, Bergeron D, Scott MS, Castro Vega L, Magne N, Huillard E, Sanson M, Meyronet D, Diaz JJ, Ducray F, Marcel V, Durand S.},
+	year = {2023},
+	month = {12},
+	date = {2023-12-08},
+	journal = {Neuro Oncol.},
+	volume = {25},
+	number = {12},
+	pages = {2191-2206},
+	doi = {10.1093/neuonc/noad140},
+	url = {http://dx.doi.org/10.1093/neuonc/noad140},
+	langid = {en}
+}
